--- a/petal_express_frontend/petal_express_vite_app/package.json
+++ b/petal_express_frontend/petal_express_vite_app/package.json
@@ -2,7 +2,6 @@
   "name": "petal_express_vite_app",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:8080",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
